# Society_site

./: .gitignore
backend/: pyproject.toml  requerements.txt
backend/society/society/: .env  asgi.py  settings.py  urls.py  wsgi.py
backend/society/users/: admin.py  backends.py  extra_logic.py  models.py  pagination.py  raw_sql.py  serializers.py  urls.py  views.py
backend/society/users/migrations/: 0001_initial.py  0002_alter_user_first_name_alter_user_sex.py  0003_friends_accepted.py  0004_rename_accepted_friends_is_accepted.py  0005_alter_message_data_created_alter_user_username.py  0006_alter_message_unique_together.py
frontend/: package-lock.json  package.json
frontend/src/: App.js  App.tsx  index.js  index.tsx  loaders.js  loaders.ts
frontend/src/app/: index.tsx
frontend/src/app/forLoader/: forLoaders.ts  loaders.ts
frontend/src/components/: AuthContext.jsx  AuthContext.tsx  ErrorPage.jsx  ErrorPage.tsx  ExitLink.jsx  ExitLink.tsx  nav.jsx  nav.tsx  peoplePage.jsx  peoplePage.tsx  profileMenu.jsx  profileMenu.tsx
frontend/src/components/UI/: switchPage.jsx  switchPage.tsx
frontend/src/extra_logic/: forLoaders.js  forLoaders.ts  operators.js  operators.ts
frontend/src/hocs/: resizeHoc.jsx
frontend/src/pages/friendsListPage/: friendsListPage.tsx  types.ts
frontend/src/pages/loginPage/: login_form.tsx  types.ts
frontend/src/pages/messagesPage/: index.css  messagePage.tsx
frontend/src/pages/peoplePage/: peoplePage.tsx
frontend/src/pages/profilePage/: profilePage.tsx
frontend/src/types/: Pagination.ts
(+51 files in other folders)
